--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-In Development... Please wait...
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Top-Down Adventure</title>
+    <link rel="stylesheet" href="assets/style.css" />
+  </head>
+  <body>
+    <div id="gameContainer">
+      <canvas id="gameCanvas"></canvas>
+    </div>
+    <script src="assets/game.js"></script>
+  </body>
+</html>
